--- a/src/backend/templates/index.html
+++ b/src/backend/templates/index.html
@@ -6,13 +6,13 @@
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </head>
 <body>
-    <h1>Test</h1>
-    <h2 id="display"></h2>
-    <script>
-        const socket = io();
-        socket.on('update_step', (data) => {
-            document.getElementById('display').textContent = data;
-        });
-    </script>
+<h1>Test</h1>
+<script>
+    const socket = io();
+    console.log(socket.id)
+    socket.on('update_step', (response) => {
+        console.log(response)
+    });
+</script>
 </body>
 </html>
