feat: add drag of objects
Гse the mouse to drag the simulation if it goes off the screen.

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -1,12 +1,21 @@
+html, body {
+  overflow: hidden;  /* Запрещаем прокрутку всей страницы */
+  height: 100%;      /* Убедитесь, что высота страницы 100%, чтобы не было лишнего пустого пространства */
+}
+
 .simulation-container {
   display: flex;
+  height: 100vh;  /* Устанавливаем высоту контейнера на 100% высоты экрана */
 }
 
 .configurator-panel {
   width: 25%;
-  background-color: #17022b
+  background-color: #17022b;
+  overflow: auto;  /* Разрешаем прокрутку внутри конфигуратора */
+  height: 100%;    /* Устанавливаем высоту на 100% для панели конфигуратора */
 }
 
 .canvas-panel {
   width: 75%;
+  height: 100%;    /* Устанавливаем высоту на 100% для панели канваса */
 }
