fix: reset screen position
reset screen position
add labels to space object properties
add templates
add additional info

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -1,21 +1,33 @@
 html, body {
-  overflow: hidden;  /* Запрещаем прокрутку всей страницы */
-  height: 100%;      /* Убедитесь, что высота страницы 100%, чтобы не было лишнего пустого пространства */
+  overflow: hidden;
+  height: 100%;
 }
 
 .simulation-container {
   display: flex;
-  height: 100vh;  /* Устанавливаем высоту контейнера на 100% высоты экрана */
+  height: 100vh;
 }
 
 .configurator-panel {
   width: 25%;
   background-color: #17022b;
-  overflow: auto;  /* Разрешаем прокрутку внутри конфигуратора */
-  height: 100%;    /* Устанавливаем высоту на 100% для панели конфигуратора */
+  overflow: auto;
+  height: 100%;
 }
 
 .canvas-panel {
   width: 75%;
-  height: 100%;    /* Устанавливаем высоту на 100% для панели канваса */
+  height: 100%;
+}
+
+.coordinates-display {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  pointer-events: none;
 }
