--- a/src/frontend/src/components/SimulationConfigurator.css
+++ b/src/frontend/src/components/SimulationConfigurator.css
@@ -1,3 +1,7 @@
+/* * {
+border: 1px solid #a31717;
+} */
+
 .simulator-config {
   background: #17022b;
   padding: 20px;
@@ -21,11 +25,30 @@
 }
 
 label {
+  width: 45%;
   display: flex;
   flex-direction: column;
   margin-bottom: 3px;
+  left: -2px;
   font-size: 0.9rem;
   color: #e2dfdf;
+}
+
+.template-select {
+  width: 100%;
+  background-color: #17022b;
+  color: #e2dfdf;
+  margin: 2px;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  transition: border-color 0.3s;
+  font-size: 0.9rem;
+}
+
+.template-select:focus {
+  border-color: #2d89ef;
 }
 
 input[type="number"],
@@ -46,10 +69,6 @@ input[type="number"]:focus,
 input[type="text"]:focus,
 select:focus {
   border-color: #2d89ef;
-}
-
-select {
-  width: 194px;
 }
 
 input[type="range"] {
@@ -88,8 +107,9 @@ button {
   border-radius: 8px;
   cursor: pointer;
   transition: background 0.3s;
-  margin-top: 10px;
+  margin-top: 4px;
   width: 30%;
+  height: fit-content;
 }
 
 button:hover {
@@ -106,6 +126,8 @@ button:hover {
 }
 
 .space-object {
+  display: flex;
+  flex-wrap: wrap;
   grid-column: span 2;
   grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
   gap: 8px;
@@ -115,14 +137,15 @@ button:hover {
   border-style: solid;
   border-radius: 8px;
   margin-bottom: 12px;
+  justify-content: space-evenly
 }
 
 .space-object input {
-  width: 25%;
+  width: 80%;
 }
 
 .space-object select {
-  width: 30%;
+  width: 100%;
 }
 
 h3 {
@@ -131,4 +154,52 @@ h3 {
   font-size: 1.3rem;
   margin-top: 16px;
   margin-bottom: 6px;
+}
+
+.floating-label {
+  width: 30%;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.floating-label input,
+.floating-label select {
+  max-width: fit-content;
+  padding: 8px 10px;
+  background-color: #17022b;
+  color: #e2dfdf;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  transition: border-color 0.3s, padding-top 0.3s, padding-bottom 0.3s;
+}
+
+.floating-label label {
+  width: 90%;
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0 4px;
+  color: #a3a3a3;
+  transition: all 0.3s;
+  pointer-events: none;
+  font-size: 0.9rem;
+}
+
+.floating-label input:focus+label,
+.floating-label input:not(:placeholder-shown)+label,
+.floating-label select:focus+label,
+.floating-label select:not([value=""])+label {
+  top: -8px;
+  left: 10px;
+  font-size: 0.75rem;
+  color: #2d89ef;
+}
+
+.floating-label input:focus,
+.floating-label select:focus {
+  border-color: #2d89ef;
+  padding-top: 12px;
+  padding-bottom: 4px;
 }
